# advent-of-code

./: README.md
2023/aoc-rust/: Cargo.toml
2023/aoc-rust/src/: day1.rs  day14.rs  day17.rs  day19.rs  day23.rs  day3.rs  day6.rs  day8.rs
2024/aoc-rust-2024/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
2024/aoc-rust-2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  helpers.rs  io.rs  lib.rs  main.rs
2025/aoc-2025-zig/: README  day1.zig  day2.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig  linalg.zig  util.zig
aoc-rust/: Cargo.toml  README.md
aoc-rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day18.rs  day2.rs  day20.rs  day22.rs  day3.rs  day4.rs  day5.rs  day7.rs  day9.rs  main.rs
