[package]
name = "aoc-rust-2023"
version = "0.1.0"
edition = "2021"
description = "Solutions to Advent of Code 2023 in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.2"
